samples/_failures_safe/1761403375_b3140f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f5143a0.c: In function ‘main’:
./samples/SAFE/__tmp_5f5143a0.c:131:5: error: expected declaration or statement at end of input
  131 |     print_matrix(matrix1, rows1, cols1);
      |     ^~~~~~~~~~~~
